--- a/lab3.Rmd
+++ b/lab3.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Follow the below instructions to make yourself comfortable in using R/RStudio for statistical/scientific computing.
 
-#### Working directory
+### Working directory
 
 Working directory is the default folder in which files are saved and read.
 
@@ -24,16 +24,16 @@ Working directory is the default folder in which files are saved and read.
 
 - Working directory is not persistent after you you close the R/RStudio. Remember to set working directory each time you open a R/RStudio.
 
-#### Read data
+### Read data
 
 R has many built-in functions to read data, for example, `read.table()`.
 
 - Let's try to read the infamous [Fisher's Iris data set](https://en.wikipedia.org/wiki/Iris_flower_data_set).
 
 - Go to the [UCI Machine Learning Repository page of Iris Data Set](https://archive.ics.uci.edu/ml/datasets/Iris). Click the link **Data Folder** and then download the two files `iris.data` and `iris.names`, and then save them into your working directory. T
-  ```{r}
-  lab2_data <- read.table("iris.data", sep = ",")
-  ```
+```{r}
+lab2_data <- read.table("iris.data", sep = ",")
+```
   Good job! You have load the data into R. Look the the **Environment** tab. You can see we have just created a variable named `lab2_data`. Click on it and peek what is inside!
 
 - Ops, what are the columns `V1`, `V2`, `V3`, `V4` and `V5`? Open then text file `iris.names` and read the description! They are actually 
@@ -48,23 +48,31 @@ R has many built-in functions to read data, for example, `read.table()`.
         -- Iris Virginica
   ```
   Rename the columns:
-  ```{r}
-  colnames(lab2_data) <- c("sepal_length", "sepal_width", "petal_length", "petal_width", "class")
-  ```
+```{r}
+colnames(lab2_data) <- c("sepal_length", "sepal_width", "petal_length", "petal_width", "class")
+```
   Check `lab2_data` again to see the change.
   
 - Put the codes
-  ```{r eval=FALSE}
-  lab2_data <- read.table("iris.data", sep = ",")
-  colnames(lab2_data) <- c("sepal_length", "sepal_width", "petal_length", "petal_width", "class")
-  ```
+```{r eval=FALSE}
+lab2_data <- read.table("iris.data", sep = ",")
+colnames(lab2_data) <- c("sepal_length", "sepal_width", "petal_length", "petal_width", "class")
+```
   into your R script and save it! Now you can shut down your computer and go out to enjoy the sunshine! See you all next week!
 
-#### Mean and standard deviation
+### Let's do some statistics!
   
 - To access a column in a data frame, for example the `sepal_length` column in `lab2_data`, type `lab2_data$sepal_length` or `lab2_data["sepal_length"]`.
 
-- Let's compute the mean and standard deviation of "sepal length" with functions `mean()` and `sd()`:
+- R has lots of built-in functions for statistics. For example, the function `summary()` show you:
+  ```{r}
+  summary(lab2_data)
+  ```
+
+- Let's compute the mean and standard deviation of "sepal length" with functions `median`, `mean()` and `sd()`:
+  ```{r }
+  median(lab2_data$sepal_length)
+  ```
   ```{r }
   mean(lab2_data$sepal_length)
   ```
@@ -72,21 +80,91 @@ R has many built-in functions to read data, for example, `read.table()`.
   sd(lab2_data$sepal_length)
   ```
 
-- R has lots of built-in functions for statistics. For example, the function `summary()` show you:
+- Let's plot a histogram.
+```{r}
+hist(lab2_data$sepal_length,
+     main = "Iris Data Set: Sepal Length in cm",
+     xlab = "cm")
+```
+
+- Let's standardize the sepal length
+```{r fig.height=8}
+mu <- mean(lab2_data$sepal_length)
+sigma <- sd(lab2_data$sepal_length)
+standardized_sepal_length <- (lab2_data$sepal_length - mu)/sigma
+
+par(mfrow=c(2,1))
+hist(lab2_data$sepal_length,
+     breaks = seq(mu-3*sigma, mu+3*sigma,length.out=13),
+     main = "Iris Data Set: Sepal Length in cm",
+     xlab = "cm")
+hist(standardized_sepal_length,
+     breaks = seq(-3, 3, length.out=13),
+     main = "Iris Data Set: Sepal Length standardized",
+     xlab = "Sepal Length standardized")
+```
+
+### Simulations/Sampling
+
+- Let's draw a sample of random numbers which follows normal distribution with mean `2.5` and standard deviation `1.2`
   ```{r}
-  summary(lab2_data)
+  n <- 1000
+  x <- rnorm(n, mean = 2.5, sd = 1.2)
   ```
   
-#### Histogram
-
-- Let's plot a histogram.
   ```{r}
-  hist(lab2_data$sepal_length,
-       main = "Iris Data Set: Sepal Length in cm",
-       xlab = "cm")
+  hist(x)
+  ```
+  
+  ```{r}
+  mean(x)
+  ```
+  
+  ```{r}
+  sd(x)
   ```
 
-#### Help/Documentation
+
+- Let's draw random samples from BTS
+  
+  ![](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/%E2%80%98LG_Q7_BTS_%EC%97%90%EB%94%94%EC%85%98%E2%80%99_%EC%98%88%EC%95%BD_%ED%8C%90%EB%A7%A4_%EC%8B%9C%EC%9E%91_%2842773472410%29_%28cropped%29.jpg/452px-%E2%80%98LG_Q7_BTS_%EC%97%90%EB%94%94%EC%85%98%E2%80%99_%EC%98%88%EC%95%BD_%ED%8C%90%EB%A7%A4_%EC%8B%9C%EC%9E%91_%2842773472410%29_%28cropped%29.jpg){width=15%}
+  ```{r}
+  bts <- c("Jin", "Suga", "J-Hope", "RM", "Jimin", "V", "Jungkook")
+  ```
+  What is the size of `bts`?
+  ```{r}
+  length(bts)
+  ```
+  
+  Sampling!
+  ```{r}
+  subgroup_a <- sample(bts, 4, replace = FALSE)
+  subgroup_b <- sample(bts, 4, replace = FALSE)
+  ```
+  
+  ```{r}
+  subgroup_a
+  ```
+  
+  ```{r}
+  subgroup_b
+  ```
+  
+  What are the union and intersection of the subgroups?
+  ```{r}
+  union(subgroup_a, subgroup_b)
+  intersect(subgroup_a, subgroup_b)
+  ```
+  
+  | Set                     | Elements                              | Size                      |
+  |-------------------------|---------------------------------------|---------------------------|
+  | BTS (Population)        | `r bts`                               |`r length(bts)`            |
+  | Subgroup A (Sample)     | `r subgroup_a`                        |`r length(subgroup_a)`     |
+  | Subgroup B (Sample)     | `r subgroup_b`                        |`r length(subgroup_b)`     |
+  | A or B (Union)          | `r union(subgroup_a, subgroup_b)`     |`r length(union(subgroup_a, subgroup_b))`     |
+  | A and B (Intersect)     | `r intersect(subgroup_a, subgroup_b)` |`r length(intersect(subgroup_a, subgroup_b))`     |
+
+### Help/Documentation
 
 Read the R Documentation of the functions you learn today. Enter the following codes, one by one, and read the corresponding documentation/help in the **Help** tab.
 ```{r}
@@ -96,18 +174,38 @@ Read the R Documentation of the functions you learn today. Enter the following c
 ?colnames
 ```
 ```{r}
+?summary
+```
+```{r}
+?median
+```
+```{r}
 ?mean
 ```
 ```{r}
 ?sd
 ```
 ```{r}
-?summary
-```
-```{r}
 ?hist
 ```
-
+```{r}
+?par
+```
+```{r}
+?rnorm
+```
+```{r}
+?length
+```
+```{r}
+?sample
+```
+```{r}
+?union
+```
+```{r}
+?intersect
+```
 How Po knows all those built-in functions in R?
 
 - Way 1: Google it
@@ -119,3 +217,30 @@ How Po knows all those built-in functions in R?
 | Po        | Codes in labs | Google   | R Documentation |
 |-----------|---------------|----------|-----------------|
 | Fisherman | Fish          | Fish Rod | Sea             |
+
+#### More R tutorial
+
+- Interactive R course lessons **swirl** https://swirlstats.com/students.html
+
+  Install **swirl** with the following commands.
+  ```{r eval=FALSE}
+  # If you haven't installed the swirl package yet
+  install.packages("swirl")
+  library(swirl)
+  install_course_github("swirldev", "R_Programming_E")
+  ```
+
+  After **swirl** is installed (you only need to do it once), you can start/resume the R tutorial with the commands:
+  ```{r eval=FALSE}
+  library(swirl)
+  swirl()
+  ```
+  Schedule some time to go though all the lessons by yourself! Almost all of the R codes you need to know are here in those lessons.
+
+- If you prefer more static readings (Po did read them to learn R!):
+  - R for Beginners https://cran.r-project.org/doc/contrib/Paradis-rdebuts_en.pdf
+  - An Introduction to R https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf
+
+- If you like RStudio's data science things,
+  - R for Data Science https://r4ds.had.co.nz/
+  - RStudio Primer https://rstudio.cloud/learn/primers/
