--- a/lab7.Rmd
+++ b/lab7.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE )
 
 1. Go though `LabAssignment4.pdf` [LabAssignment4.pdf](LabAssignment4.pdf)
 
-2. Download `LabAssignment4.Rmd` [LabAssignment4.Rmd](LabAssignment4.Rmd) [Me](LabAssignment4.Rmd) [MendelFigure1.png](MendelFigure1.png) [MendelFigure2.png](MendelFigure2.png)  in RStudio and run codes inside. Things should be exactly same as `LabAssignment4.pdf`.
+2. Download `LabAssignment4.Rmd` ([LabAssignment4.Rmd](LabAssignment4.Rmd), [MendelFigure1.png](MendelFigure1.png), [MendelFigure2.png](MendelFigure2.png)) in RStudio and run codes inside. Things should be exactly same as `LabAssignment4.pdf`.
 
 3. Download, open `LabAssignment4_rev.Rmd` [LabAssignment4_rev.Rmd](LabAssignment3_jp.Rmd) and save as a new Rmd file for your own Lab Assignment submission. Knit this Rmd file to see if you can make a html, pdf or words. If you couldn't, just use RStudio Cloud or the Binder RStudio [![Binder](http://mybinder.org/badge_logo.svg)](http://mybinder.org/v2/gh/ucdavis-sta-100-spring-2021/polabs/main?urlpath=rstudio) set by Po.
 
